styles/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  block-size: 100%;
}

.page {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  color: #fff;
  font-family: 'Fira Sans Condensed', sans-serif;
  font-size: 18px;
  background-color: #1b1919;
  inline-size: 1200px;
  block-size: 100%;
}

h1,
h2,
h3,
h4,
p,
ul,
ol,
li,
blockquote,
fieldset {
  margin: 0;
  padding: 0;
}

ul,
ol {
  list-style: none;
}

.visually-hidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  inline-size: 1px;
  block-size: 1px;
  clip-path: inset(50%);
  white-space: nowrap;
}

.button {
  border: 1px solid currentColor;
  padding: 6px;
  color: inherit;
  font-family: inherit;
  font-weight: 700;
  font-size: 18px;
  text-decoration: underline transparent;
  background-color: transparent;
  transition: all 0.2s;
  cursor: pointer;
}

.button:focus {
  outline: none;
}

.button:focus-visible {
  outline: 1px solid currentColor;
  outline-offset: 2px;
}

.button:hover {
  text-decoration: underline currentColor;
}

.button:active {
  background-color: #545050;
}

/* Кастомный скроллбар */

.custom-scrollbar::-webkit-scrollbar {
  width: 4px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: rgb(217 217 217 / 0.1);
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #d9d9d9;
}

.content {
  display: flex;
  justify-content: space-between;
  align-items: end;
  column-gap: 30px;
  min-width: 1140px;
  padding-inline: 30px;
}

.result {
  display: flex;
  flex-direction: column;
  row-gap: 16px;
}

.result__video-container {
  position: relative;
  min-width: 711px;
  height: 386px;
}

.result__video {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.search-form {
  display: flex;
  justify-content: space-between;
  align-items: start;
  column-gap: 30px;
}

.search-form__fieldset {
  display: flex;
  flex-direction: column;
  row-gap: 5px;
  border: none;
}

.search-form__fieldset-title {
  font-weight: 400;
  font-size: 18px;
  line-height: 1.2;
}

.search-form__label {
  display: flex;
  align-items: center;
  column-gap: 1.5px;
  width: fit-content;
}

.search-form__label:has(:focus-visible) {
  outline: 1px solid currentColor;
  outline-offset: 2px;
}

.search-form__textfield {
  min-width: 225px;
  border-inline: none;
  border-block: 1px solid #fff;
  padding: 1.5px 0;
  color: inherit;
  font-family: inherit;
  font-weight: 400;
  font-size: 18px;
  background-color: transparent;
  appearance: none;
}

.search-form__textfield:focus {
  outline: none;
}

.search-form__textfield::placeholder {
  color: rgb(255 255 255 / 0.7);
  font-weight: 400;
  font-size: 18px;
}

.search-form__checkbox-list {
  display: flex;
  justify-content: space-between;
  align-items: center;
  column-gap: 20px;
}

.search-form__pseudo-checkbox {
  width: 19px;
  height: 19px;
  border: 1px solid currentColor;
  padding: 1px;
  cursor: pointer;
}

.search-form__pseudo-checkbox::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  opacity: 0;
  background-color: currentColor;
  transition: all 0.2s;
}

.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
  opacity: 1;
}

.search-form__label-text {
  text-decoration: underline transparent;
  transition: all 0.2s;
}

.search-form__label:hover .search-form__label-text {
  text-decoration: underline currentColor;
  cursor: pointer;
}

.search-form__submit-button {
  align-self: end;
  min-width: 194px;
}

.content__details {
  display: flex;
  flex-direction: column;
  row-gap: 20px;
  width: 100%;
  height: 100%;
}

.title {
  font-family: Oswald, sans-serif;
  font-size: 75px;
  line-height: 0.94;
  text-transform: uppercase;
}

.content__accent {
  color: #545050;
}

.content__list-container {
  position: relative;
  display: flex;
  flex-direction: column;
  row-gap: 30px;
  height: 298px;
  padding: 2px 3px;
  overflow-y: auto;
}

.content__list {
  display: flex;
  flex-direction: column;
  row-gap: 30px;
}

.content__card-link {
  display: block;
  color: inherit;
  text-decoration: underline transparent;
  transition: all 0.2s;
  cursor: pointer;
}

.content__card-link:focus {
  outline: none;
}

.content__card-link:focus-visible {
  outline: 1px solid currentColor;
}

.content__card-link:hover {
  text-decoration: underline currentColor;
}

.content__card-link:active,
.content__card-link_current {
  background-color: #545050;
}

.content__video-card {
  display: flex;
  align-items: start;
}

.content__video-card-description-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  row-gap: 6px;
  max-width: 196px;
}

.content__video-card-title {
  overflow: hidden;
  font-family: Oswald, sans-serif;
  font-weight: 700;
  font-size: 30px;
  line-height: 1;
  text-transform: uppercase;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.content__video-card-description {
  display: -webkit-box;
  overflow: hidden;
  font-weight: 400;
  line-height: 0.9;
  -webkit-line-clamp: 4;
  line-clamp: 4;
  -webkit-box-orient: vertical;
}

.content__video-card-thumbnail {
  min-width: 194px;
  height: 103px;
  object-fit: cover;
  object-position: center;
}

.more-button {
  width: 100%;
}

